<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_main_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:background="#a2a2a2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/rg_employer_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_5"
            android:paddingTop="@dimen/space_5">

            <RadioButton
                android:id="@+id/rb_main_offline"
                style="@style/RadioButtonStyle"
                android:drawableTop="@drawable/main_item_wallet"
                android:text="@string/tv_web_offline"/>

            <RadioButton
                android:id="@+id/rb_main_vehicle"
                style="@style/RadioButtonStyle"
                android:drawableTop="@drawable/main_item_offline"
                android:text="@string/tv_web_vehicle"/>

            <RadioButton
                android:id="@+id/rb_main_transaction"
                style="@style/RadioButtonStyle"
                android:drawableTop="@drawable/main_item_trans"
                android:text="@string/tv_web_trans"/>

            <RadioButton
                android:id="@+id/rb_main_run"
                style="@style/RadioButtonStyle"
                android:drawableTop="@drawable/main_item_vehicle"
                android:text="@string/tv_web_run"/>

            <RadioButton
                android:id="@+id/rb_main_wallet"
                style="@style/RadioButtonStyle"
                android:drawableTop="@drawable/main_item_run"
                android:text="@string/tv_web_wallet"/>
        </RadioGroup>
    </RelativeLayout>
</LinearLayout>
