<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_135">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_display_dialog_t1"
                        android:textColor="@color/color_303030"
                        android:textSize="15sp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/space_4"
                        android:paddingRight="@dimen/space_4"
                        android:src="@mipmap/display_yiguoqi_xiao"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_display_dialog_t2"
                        android:textColor="@color/color_303030"
                        android:textSize="15sp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_display_dialog_t3"
                    android:layout_marginTop="@dimen/space_15"
                    android:textColor="@color/color_808080"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_display_dialog_t4"
                    android:layout_marginTop="@dimen/space_15"
                    android:textColor="@color/color_303030"
                    android:textSize="15sp"/>
            </LinearLayout>
        </RelativeLayout>
        <Button
            android:id="@+id/bt_dialogutils_sure_guoqi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_00bbff"
            android:textColor="@color/color_ffffff"
            android:text="@string/sure"
            android:textSize="18sp"/>
    </LinearLayout>
</RelativeLayout>