<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/color_bebebe">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_150"
        android:orientation="vertical"
        android:background="@drawable/item_shap_yuanjiao_background">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_dialogutils_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_textview_t1"
                    android:textSize="18sp"
                    android:textColor="@color/color_303030"/>
                <TextView
                    android:id="@+id/tv_dialogutils_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_5"
                    android:text="@string/dialog_textview_t2"
                    android:textSize="18sp"
                    android:textColor="@color/color_303030"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <TextView
                android:id="@+id/tv_dialog_net_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/color_ccf1ff"
                android:text="@string/cancel"
                android:textColor="@color/color_00bbff"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/tv_dialog_net_sure"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/color_00bbff"
                android:text="@string/sure"
                android:textColor="@color/color_ffffff"
                android:textSize="17sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>