<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:background="@color/color_cfcfcf">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_45"
        android:background="@color/color_00bbff">
        <RelativeLayout
            android:id="@+id/rl_upload_kuang_back"
            android:layout_width="@dimen/space_40"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/nav_back_normal"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_upload_kuang_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/activity_upload_kuang_title"
            android:textColor="@color/color_ffffff"
            android:textSize="18sp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_100"
        android:orientation="vertical"
        android:background="@color/color_ffffff">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/activity_upload_kuang_vehicle"
                android:textSize="14sp"
                android:textColor="@color/color_333333"/>
            <TextView
                android:layout_width="@dimen/space_1"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_7"
                android:layout_marginBottom="@dimen/space_7"
                android:background="@color/color_bebebe"/>
            <TextView
                android:id="@+id/tv_upload_kuang_vehicle"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/space_15"
                android:gravity="center_vertical"
                android:text="晋BA3456"
                android:textSize="14sp"
                android:textColor="@color/color_333333"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginLeft="@dimen/space_15"
            android:background="@color/color_bebebe"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_upload_kuang_qian_dun"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/activity_upload_kuang_dun"
                android:textSize="14sp"
                android:textColor="@color/color_333333"/>
            <TextView
                android:layout_width="@dimen/space_1"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_7"
                android:layout_marginBottom="@dimen/space_7"
                android:background="@color/color_bebebe"/>
            <EditText
                android:id="@+id/et_upload_kuang_dun"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/space_15"
                android:gravity="center_vertical"
                android:background="@null"
                android:inputType="numberDecimal"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:maxLength="10"
                android:hint="@string/activity_upload_kuang_dun_input"
                android:textColorHint="@color/color_999999"
                android:textSize="14sp"
                android:textColor="@color/color_333333"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginLeft="@dimen/space_15"
            android:background="@color/color_bebebe"/>
        <LinearLayout
            android:id="@+id/ll_upload_focus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_upload_kuang_qian_date"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/activity_upload_kuang_date"
                android:textSize="14sp"
                android:textColor="@color/color_333333"/>
            <TextView
                android:layout_width="@dimen/space_1"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_7"
                android:layout_marginBottom="@dimen/space_7"
                android:background="@color/color_bebebe"/>
            <TextView
                android:id="@+id/tv_upload_kuang_date"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/space_15"
                android:paddingRight="@dimen/space_15"
                android:gravity="center_vertical"
                android:drawableRight="@mipmap/upload_date_arraw"
                android:hint="@string/activity_upload_kuang_date_input"
                android:textSize="14sp"
                android:textColor="@color/color_333333"/>
        </LinearLayout>
    </LinearLayout>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_10"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_80"
            android:background="@color/color_ffffff"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/space_15">
                <TextView
                    android:id="@+id/tv_upload_kuang_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_upload_kuang_date_input"
                    android:textColor="@color/color_585858"
                    android:textSize="13sp"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_1"
                android:background="@color/color_dddddd"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/space_15">
                <EditText
                    android:id="@+id/et_upload_kuang_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/color_303030"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="4"
                    android:background="@mipmap/input_box_long"/>
                <TextView
                    android:layout_width="@dimen/space_20"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity_upload_kuang_year"
                    android:textSize="11sp"
                    android:textColor="@color/color_585858"/>
                <EditText
                    android:id="@+id/et_upload_kuang_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/color_303030"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:background="@mipmap/input_box_long"/>
                <TextView
                    android:layout_width="@dimen/space_20"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity_upload_kuang_month"
                    android:textSize="11sp"
                    android:textColor="@color/color_585858"/>
                <EditText
                    android:id="@+id/et_upload_kuang_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/color_303030"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:background="@mipmap/input_box_long"/>
                <TextView
                    android:layout_width="@dimen/space_20"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity_upload_kuang_day"
                    android:textSize="11sp"
                    android:textColor="@color/color_585858"/>
                <EditText
                    android:id="@+id/et_upload_kuang_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/color_303030"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:background="@mipmap/input_box_short"/>
                <TextView
                    android:layout_width="@dimen/space_20"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="："
                    android:textSize="11sp"
                    android:textColor="@color/color_585858"/>
                <EditText
                    android:id="@+id/et_upload_kuang_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/color_303030"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="2"
                    android:background="@mipmap/input_box_short"/>
            </LinearLayout>
        </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_220"
        android:layout_marginTop="@dimen/space_15"
        android:background="@color/color_ffffff">
        <RelativeLayout
            android:id="@+id/rl_upload_kuang_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/space_15">
            <ImageView
                android:id="@+id/iv_upload_kuang_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/upload_kuang_xuline"/>
            <Button
                android:id="@+id/bt_upload_img_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@mipmap/upload_button"
                android:text="@string/activity_upload_kuang_button"
                android:textColor="@color/color_ffffff"
                android:textSize="17sp"/>
        </RelativeLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_30"
        android:layout_below="@id/rl_upload_kuang_img"
        android:background="@color/color_ffffff"
        android:gravity="center_horizontal"
        android:textSize="13sp"
        android:textColor="@color/color_333333"
        android:text="@string/activity_upload_kuang_danju"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_ffffff"
        android:padding="@dimen/space_6">
        <Button
            android:id="@+id/bt_upload_kuang_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_upload_kuang_button"
            android:background="@mipmap/upload_shuju_save"
            android:textColor="@color/color_ffffff"
            android:textSize="17sp"/>
    </RelativeLayout>
</RelativeLayout>